test-cases/final-dump.save/error_mode2.wybe
# Test cases for errors for terminal and failing determinisms

pub def {terminal} non_terminal(?x:int) {
    ?x = 2
}

pub def {terminal} non_terminal2(?x:int) {
    fail
}

pub def {terminal} terminal_ok(?x:int) {
    !exit(2)
}

pub def {failing} non_failing(?x:int) {
    ?x = 2
}

pub def {failing} failing_ok(?x:int) {
    ?x = 2
    fail
}

pub def {failing} failing_ok2(?x:int) {
    ?x = 2
    !exit(2)
}
